// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should prioritize disabled over error styles 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<div
  className="circuit-2 circuit-3"
  disabled={true}
>
  <input
    aria-invalid={true}
    className="circuit-0 circuit-1"
    disabled={true}
    required={false}
  />
</div>
`;

exports[`Input should prioritize disabled over warning styles 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:not(:focus) {
  border-color: #FFC859;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus) {
  border-color: #FFAF9F;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFAF9F;
}

<div
  className="circuit-4 circuit-5"
  disabled={false}
>
  <input
    aria-invalid={true}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  >
    <div>
      error.svg
    </div>
  </div>
</div>
`;

exports[`Input should prioritize error over optional styles 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  background-color: #FAFBFC;
  border-style: dashed;
  box-shadow: none;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:not(:focus) {
  border-color: #FFAF9F;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFAF9F;
}

<div
  className="circuit-4 circuit-5"
  disabled={false}
>
  <input
    aria-invalid={true}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  >
    <div>
      error.svg
    </div>
  </div>
</div>
`;

exports[`Input should render with a Tooltip when passed the validationHint prop 1`] = `
.circuit-6 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-4 {
  display: inline-block;
  width: 100%;
  max-width: 280px;
  min-width: 120px;
  background-color: #212933;
  color: #FFFFFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 1;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 0 1px 0 rgba(12,15,20,0.06), 0 2px 2px 0 rgba(12,15,20,0.06);
  right: 50%;
  right: calc(50% - (16px + 4px));
  bottom: 100%;
  bottom: calc(100% + 12px);
  right: 1px;
}

.circuit-4::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-4::after {
  right: 12px;
}

.circuit-4::after {
  top: 100%;
  border-top-color: #212933;
}

<div
  className="circuit-6 circuit-7"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  />
  <div
    className="circuit-4 circuit-5"
  >
    Validation hint
  </div>
</div>
`;

exports[`Input should render with a prefix when passed the prefix prop 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

<div
  className="circuit-4 circuit-5"
  disabled={false}
>
  <div
    style={
      Object {
        "height": "24px",
        "width": "24px",
      }
    }
  />
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  />
</div>
`;

exports[`Input should render with a suffix when passed the suffix prop 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

<div
  className="circuit-2 circuit-3"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    style={
      Object {
        "height": "24px",
        "width": "24px",
      }
    }
  />
</div>
`;

exports[`Input should render with default styles 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

<div
  className="circuit-4 circuit-5"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  />
</div>
`;

exports[`Input should render with disabled styles when passed the disabled prop 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<div
  className="circuit-2 circuit-3"
  disabled={true}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={true}
    required={false}
  />
</div>
`;

exports[`Input should render with inline styles when passed the inline prop 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  display: inline-block;
  margin-right: 16px;
}

<div
  className="circuit-4 circuit-5"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  />
</div>
`;

exports[`Input should render with invalid styles when passed the invalid prop 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:not(:focus) {
  border-color: #FFAF9F;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFAF9F;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFAF9F;
}

<div
  className="circuit-4 circuit-5"
  disabled={false}
>
  <input
    aria-invalid={true}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  >
    <div>
      error.svg
    </div>
  </div>
</div>
`;

exports[`Input should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  margin-bottom: 0;
}

<div
  className="circuit-4 circuit-5"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  />
</div>
`;

exports[`Input should render with optional styles when passed the optional prop 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  background-color: #FAFBFC;
  border-style: dashed;
  box-shadow: none;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

<div
  className="circuit-4 circuit-5"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  />
</div>
`;

exports[`Input should render with right aligned text 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  text-align: right;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

<div
  className="circuit-4 circuit-5"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  />
</div>
`;

exports[`Input should render with valid styles when passed the showValid prop 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

<div
  className="circuit-4 circuit-5"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  >
    <div>
      valid.svg
    </div>
  </div>
</div>
`;

exports[`Input should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:not(:focus) {
  border-color: #FFC859;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #FFC859;
}

.circuit-0:not(:focus)::placeholder {
  color: #FFC859;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

<div
  className="circuit-4 circuit-5"
  disabled={false}
>
  <input
    aria-invalid={false}
    className="circuit-0 circuit-1"
    disabled={false}
    required={false}
  />
  <div
    className="circuit-2 circuit-3"
  >
    <div>
      warning.svg
    </div>
  </div>
</div>
`;
